--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,16 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	
+	<description>flink-json的增强版，可使用Flink SQL解析Debezium采集数据的op属性</description>
 	<groupId>cn.tenmg</groupId>
 	<artifactId>flink-json-plus</artifactId>
 	<version>1.0.0</version>
 	<packaging>jar</packaging>
 
+	<name>flink-json-plus</name>
+	<url>https://gitee.com/tenmg/flink-json-plus</url>
+	
 	<organization>
 		<name>10MG</name>
 		<url>http://www.10mg.cn</url>
